manifests/deployments/apps/preview/deploy-preview-env-template/be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
# spec:
  # template:
  #   spec:
  #     nodeSelector:
  #       alpha.eksctl.io/nodegroup-name: test-eks-dev-mng-pub01
