manifests/deployments/apps/preview/deploy-preview-env-template/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: rim-api-pr-7780-preview.test.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel
            port:
              name: http-laravel
